# py-forstate

./: LICENSE  README.md  pyproject.toml
src/: forstate.py
test/: test_forstate.py
tests/: test_forstate.py
