[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "forstate"
authors = [{name = "Salvador Fandiño", email = "sfandino@yahoo.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.0.1"
description = "Dispatch methods according to a state value"

[project.urls]
Home = "http://github.com/salva/py-forstate"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]